css/styles.css
/* ... */
.dif-perspectives-wrapper {
  display: flex;
}

.perspectives-text-wrapper {
  margin: 140px 0 20px 0;
  margin-right: 60px;
}

.perspectives-text-wrapper h2 {
  color: black;
  font-weight: 400;
  margin-bottom: 20px;
  font-size: 22px;
}

.perspectives-img-wrapper {
  margin-top: var(--size-100);
}
/* different perspectives end */

/* why front section start */
.why-front {
  margin-bottom: var(--size-100);
}
.dots-wrapper {
  width: 70%;
  margin: 0 auto;
  display: flex;
  justify-content: center;
  gap: 3px;
}

.dot-item-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 15px;
  width: fit-content;
}

.dots-wrapper .gray-dot {
  height: 40px;
  width: 40px;
  background-color: #d5deea85;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.dots-wrapper .blue-dot {
  height: 5px;
  width: 5px;
  background-color: #2476fe;
  border-radius: 50%;
}

.gray-line {
  border-top: 2px solid #d5deea85;
  width: 100%;
  margin-top: 20px;
  margin-left: -59px;
  margin-right: -59px;
}
.why-text {
  width: 160px;
  text-align: center;
}

/* why front section end */
.banner-two {
  position: relative;
  margin-bottom: var(--size-100);
}

.play-circle-icon {
  height: 60px;
  width: 60px;
  border-radius: 50%;
  background-color: var(--white);
  box-shadow: 0 0 5px 1px var(--font-color-light);
  display: flex;
  align-items: center;
  justify-content: center;
}

.play-circle-icon {
  position: absolute;
  top: 50%;
  left: 50%;
}

.play-circle-icon .fa-play {
  color: black;
}

/* hubspot section */
.hubspot {
  /* border: 1px solid black; */
  margin-bottom: var(--size-100);
  display: flex;
  gap: var(--size-40);
}

.hubspot-text-wrapper {
  margin-top: var(--size-100);
}

.hubspot-icon-wrapper {
  width: 80px;
}

.hubspot-text-wrapper h3 {
  font-weight: 400;
  color: black;
}

.hubspot-text-wrapper h4,
.hubspot-text-wrapper h6 {
  margin: 0;
}

/* trusted by section */
.trusted-by {
  margin-bottom: var(--size-100);
}
.trusted-by h3 {
  margin-bottom: var(--size-40);
}
.trusted-brands {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}

.trusted-brand {
  width: 100px;
}

/* pricing section */
.pricing {
  /* border: 1px solid black; */
  margin-bottom: var(--size-100);
}

.pricing-text-wrapper {
  margin-bottom: var(--size-40);
}

.pricing-cards-wrapper {
  width: 70%;
  margin: 0 auto;
  display: flex;
  gap: var(--size-30);
}

.pricing-card-lg {
  padding: 15px;
  box-shadow: 0px 0px 10px rgba(48, 63, 100, 0.2);
  width: 40%;
}

.pricing-card-lg .card-title {
  display: flex;
  align-items: baseline;
  gap: 5px;
}

.pricing-card-lg .card-title h1 {
  color: black;
  font-weight: 400;
  font-size: var(--size-40);
  margin: 30px 0 0 0;
}
.pricing-card-lg hr {
  margin-bottom: 20px;
}

.pricing-card-lg p {
  font-size: var(--size-12);
  margin-bottom: var(--size-40);
}

.pricing-card-lg .no-cc {
  font-size: var(--size-10);
  color: var(--font-color-light);
}

.small-cards-wrapper {
  display: flex;
  width: 60%;
  gap: var(--size-30);
}

.small-stacked-cards {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: var(--size-20);
}

.small-card-img-wrapper {
  width: 40px;
}

.small-card p {
  font-size: var(--size-12);
  color: gray;
}

/* hire-us section */
.hire-us {
  background-color: #1e335a;
  padding: 20px 0;
  margin-bottom: var(--size-100);
}

.hire-us .container {
  display: flex;
  gap: var(--size-100);
  align-items: center;
  justify-content: center;
}

.hire-us-testimonial {
  color: white;
}

.hire-us-testimonial h2 {
  font-size: 22px;
  font-weight: 600;
}
.first-text-wrapper {
  font-size: 12px;
  color: var(--font-color-light);
  width: 150px;
}
.hire-us-testimonial hr {
  color: var(--font-color-light);
}
.hire-us-testimonial .quote {
  font-size: 12px;
  color: white;
  margin-bottom: 30px;
}

.hire-us-testimonial h4 {
  font-size: var(--size-12);
}

.hire-us-testimonial h4,
.hire-us-testimonial h6 {
  margin: 0;
}

.hire-us-testimonial h6 {
  color: var(--font-color-light);
  margin-bottom: 30px;
}

.people-wrapper {
  display: flex;
  align-items: center;
  gap: 20px;
}
.person img {
  height: 30px;
  width: 30px;
  border-radius: 50%;
}

.person .person-man {
  height: 50px;
  width: 50px;
  border-radius: 50%;
}

.hire-us-form {
  background-color: white;
  padding: 15px;
  border-radius: 8px;
  width: 370px;
  padding-bottom: var(--size-30);
}

.hire-us-form h4 {
  margin: 0;
  color: black;
  margin-bottom: var(--size-16);
}

.hire-us-form input,
.hire-us-form select {
  border: 1px solid #d5deea85;
  border-radius: 4px;
  padding: 10px;
  font-size: var(--size-12);
  color: var(--font-color-light);
  width: 100%;
}

.hire-us-form select {
  color: black;
}

.hire-us-form .name-row {
  display: flex;
  gap: var(--size-16);
  margin-bottom: var(--size-16);
}

.hire-us-form textarea {
  border: 1px solid #d5deea85;
  border-radius: 4px;
  padding: 10px;
  font-size: var(--size-12);
  color: var(--font-color-light);
  min-width: 100%;
  resize: none;
  font-family: "Open Sans", sans-serif;
  margin-bottom: var(--size-16);
}
.check-privacy {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  margin-bottom: var(--size-10);
}

.check-privacy input {
  margin: 0;
  margin-top: 5px;
  margin-right: var(--size-10);
  width: 20px;
  transform: scale(1.3);
}

.check-privacy label {
  font-size: var(--size-10);
}
.privacy-row {
  /* margin-left: 24px; */
  display: flex;
  justify-content: center;
  gap: var(--size-20);
  margin-bottom: var(--size-20);
}
.privacy-policy {
  font-size: var(--size-10);
}
.privacy-policy a {
  color: var(--font-color-dark);
  border-bottom: 1px dashed var(--font-color-dark);
  font-weight: 600;
}

.policy-two a {
  color: var(--font-color-link);
  border-bottom: 1px dashed var(--font-color-link);
}

.get-started-btn {
  width: 100%;
  margin: 0 auto;
  text-align: center;
}
/* ... */

